--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2018"
 
 [dependencies]
 clap = "2.31"
+dirs = "2.0"
 indicatif = "0.12.0"
+git2 = "0.10"
 handlebars = "2.0.1"
 serde_json = "1.0"
 structopt = "0.2.18"
