--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,16 @@ edition = "2018"
 
 [dependencies]
 clap = "2.31"
+console = "0.9"
 dirs = "2.0"
 indicatif = "0.12.0"
 git2 = "0.10"
+git2_credentials = "0.3"
 handlebars = "2.0.1"
+read_input = "0.8"
+rm_rf = "0.3.0"
 serde_json = "1.0"
 structopt = "0.2.18"
 structopt-derive = "0.2.18"
 quick-error = "1.2.2"
+walkdir = "2.2"
