--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2018"
 clap = "2.31"
 console = "0.9"
 dirs = "2.0"
-indicatif = "0.12.0"
+fx_extra = "1.1"
 git2 = "0.10"
 git2_credentials = "0.3"
 handlebars = "2.0.1"
+indicatif = "0.12.0"
 read_input = "0.8"
 rm_rf = "0.3.0"
 serde_json = "1.0"
