Fixed used trait names for installers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 clap = "2.31"
 console = "0.9"
 dirs = "2.0"
-fx_extra = "1.1"
+fs_extra = "1.1"
 git2 = "0.10"
 git2_credentials = "0.3"
 handlebars = "2.0.1"
