--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,10 @@ handlebars = "2.0.1"
 indicatif = "0.12.0"
 read_input = "0.8"
 rm_rf = "0.3.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.2.18"
 structopt-derive = "0.2.18"
+toml = "0.5"
 quick-error = "1.2.2"
 walkdir = "2.2"
