--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,13 @@ git2_credentials = "0.3"
 handlebars = "2.0.1"
 indicatif = "0.12.0"
 read_input = "0.8"
+regex = "1.3"
 rm_rf = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.2.18"
 structopt-derive = "0.2.18"
+lazy_static = "1.4.0"
 toml = "0.5"
 quick-error = "1.2.2"
 walkdir = "2.2"
